# ffed

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  test.yml
ffed/: __init__.py  adapter.py  custom_exceptions.py  main.py  utils.py
ffed/encoders_decoders/: __init__.py  abstract_encoder_decoder.py  encoder_enum.py  encoders.py
ffed/encoders_decoders/tests/: base_x_test.py  encoders_test.py
ffed/hashes/: __init__.py  abstract_hashes.py  hashes.py  hashes_enum.py
ffed/hashes/tests/: hashes_test.py
tests/: encoded_text  ffed_test.py  test_ffed.py
