[tool.poetry]
name = "ffed"
version = "0.1.0"
description = "A full-fledged encoder decoder"
license = "MIT"
authors = ["Sahil Rawat <sahil.rawat.1603@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
