[tool.poetry]
name = "ffed"
version = "0.1.1"
description = "A full-fledged encoder decoder"
license = "MIT"
authors = ["Sahil Rawat <sahil.rawat.1603@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "*"
ipdb = "^0.13.9"

[tool.poetry.scripts]
ffed = "ffed.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
